--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Just Code It</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>New Hampshire</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Magic: The Gathering and Arsenal Football Club</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Professional Dreamer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Reality</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Paper</p>
     </section>
 
     <footer id="footer">
